--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "package.json": "^2.0.1",
     "socket.io": "^3.0.1"
   }
 }
